--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "babel-node index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "node-gugu": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0"
   }
 }
