--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index"
+    "start": "nodemon --exec npm run server",
+    "server": "babel-node index",
+    "webpack": "webpack-dev-server",
+    "g": "NODE_ENV=production webpack -p"
   },
   "repository": {
     "type": "git",
@@ -14,10 +17,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-gugu": "^1.0.2"
+    "express": "^4.13.4",
+    "express-react-views": "^0.10.0",
+    "node-gugu": "^1.0.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0"
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "nodemon": "^1.9.0",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
