--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
-    "express-react-views": "^0.10.0",
+    "jade": "^1.11.0",
     "node-gugu": "^1.0.2",
+    "qwest": "^4.1.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
@@ -29,7 +30,10 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "nodemon": "^1.9.0",
+    "style-loader": "^0.13.0",
+    "stylus-loader": "^1.5.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
